<resources>
    <string name="app_name">Sote</string>
    <string name="RegisterTest">Register Here</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="confirm_password">Confirm Password...</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_account">Already Have Account ?</string>
    <string name="need_a_new_account">Need a new account ?</string>
    <string name="login">Login</string>
    <string name="login_text">LOGIN</string>

    <string name="bottom_home_text">Home</string>
    <string name="bottom_search_text">Search</string>
    <string name="bottom_edit_text">Edit</string>
    <string name="bottom_notifications_text">Notifications</string>
    <string name="bottom_donations_text">Donations</string>
    <string name="logout_menu">Logout</string>
    <string name="user_phone">Phone:</string>
    <string name="user_blood_group">Blood Group:</string>
    <string name="user_weight">Weight</string>
    <string name="user_username">Username:</string>
    <string name="make_request">Request</string>
    <string name="user_donations_text">0 Donations</string>
<!--    <string name="map_key" translatable="false">AIzaSyCdH5x2f_lbDaoDVV5Bk85DGpdXZbwMMeY</string>-->

    <!-- Needed for Current Place Activity -->
    <string name="title_activity_current_place">Map</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>

    <string-array name="bloodgrp_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
</resources>
