<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_action_home"
        android:icon="@drawable/baseline_home"
        android:title="@string/bottom_home_text"
        />

    <item
        android:id="@+id/bottom_action_donate"
        android:icon="@drawable/baseline_blood"
        android:title="@string/bottom_donations_text"/>

    <item
        android:id="@+id/bottom_action_notification"
        android:icon="@drawable/baseline_notification"
        android:title="@string/bottom_notifications_text" />

    <item
        android:id="@+id/bottom_action_search"
        android:icon="@drawable/baseline_local_hospital"
        android:title="@string/bottom_search_text" />

    <item
        android:id="@+id/bottom_action_edit"
        android:icon="@drawable/baseline_create"
        android:title="@string/bottom_edit_text" />
</menu>