<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardMaxElevation="1dp"
        app:cardElevation="1dp"
        app:cardCornerRadius="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp">

        <RelativeLayout
            android:layout_width="399dp"
            android:layout_height="wrap_content">

<!--            <Button-->
<!--                android:id="@+id/user_call_btn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentBottom="true"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:text="Call"-->
<!--                android:textAllCaps="false" />-->

            <TextView
                android:id="@+id/user_phone"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_username"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/user_image"
                android:text="@string/user_phone"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_bloodgroup"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:textColor="@color/indian_red"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_phone"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/user_image"
                android:text="@string/user_blood_group"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_weight"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_bloodgroup"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/user_image"
                android:text="@string/user_weight"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_username"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/user_image"
                android:text="@string/user_username"
                android:textSize="16sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:paddingLeft="8dp"
                android:src="@drawable/image_placeholder" />

            <ImageView
                android:id="@+id/user_call_btn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_toRightOf="@+id/user_weight"
                android:layout_alignParentBottom="true"
                android:src="@drawable/baseline_call"/>

            <TextView
                android:id="@+id/user_call_text"
                android:text="@string/make_request"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/user_call_btn"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/user_donations"
                android:src="@drawable/trophy_black"
                android:layout_alignParentBottom="true"
                android:layout_width="32dp"
                android:layout_height="32dp"/>

            <TextView
                android:id="@+id/user_donations_count"
                android:text="@string/user_donations_text"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/user_donations"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>




    </androidx.cardview.widget.CardView>
</LinearLayout>